--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ figure {
  * Define consistent border, margin, and padding.
  */
 fieldset {
-  border: 1px solid silver;
+  border: 1px solid #c0c0c0;
   margin: 0 2px;
   padding: 0.35em 0.625em 0.75em;
 }
@@ -385,8 +385,8 @@ body {
 }
 
 body {
-  background: white;
-  color: #222222;
+  background: #fdfdfd;
+  color: #172625;
   padding: 0;
   margin: 0;
   font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
@@ -1589,12 +1589,12 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #2ba6cb;
+  color: #24615b;
   text-decoration: none;
   line-height: inherit;
 }
 a:hover, a:focus {
-  color: #2795b6;
+  color: #1d4e4a;
 }
 a img {
   border: none;
@@ -1744,7 +1744,7 @@ abbr,
 acronym {
   text-transform: uppercase;
   font-size: 90%;
-  color: #222222;
+  color: #172625;
   border-bottom: 1px dotted #dddddd;
   cursor: help;
 }
@@ -1839,7 +1839,7 @@ blockquote p {
 @media print {
   * {
     background: transparent !important;
-    color: black !important;
+    color: #000 !important;
     /* Black prints faster: h5bp.com/s */
     box-shadow: none !important;
     text-shadow: none !important;
@@ -1866,7 +1866,7 @@ blockquote p {
 
   pre,
   blockquote {
-    border: 1px solid #999999;
+    border: 1px solid #999;
     page-break-inside: avoid;
   }
 
@@ -1933,12 +1933,12 @@ button, .button {
   padding-bottom: 0.8125em;
   padding-left: 1.5em;
   font-size: 1em;
-  background-color: #2ba6cb;
-  border-color: #2284a1;
+  background-color: #24615b;
+  border-color: #163c38;
   color: white;
 }
 button:hover, button:focus, .button:hover, .button:focus {
-  background-color: #2284a1;
+  background-color: #163c38;
 }
 button:hover, button:focus, .button:hover, .button:focus {
   color: white;
@@ -2013,8 +2013,8 @@ button.right-align, .button.right-align {
   padding-right: 0.75em;
 }
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
-  background-color: #2ba6cb;
-  border-color: #2284a1;
+  background-color: #24615b;
+  border-color: #163c38;
   color: white;
   cursor: default;
   opacity: 0.6;
@@ -2022,13 +2022,13 @@ button.disabled, button[disabled], .button.disabled, .button[disabled] {
   box-shadow: none;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #2284a1;
+  background-color: #163c38;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
   color: white;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #2ba6cb;
+  background-color: #24615b;
 }
 button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
   background-color: #e9e9e9;
@@ -2865,7 +2865,7 @@ form.custom .custom.disabled {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .split.button span {
-  border-left-color: #1e728c;
+  border-left-color: #0f2927;
 }
 .split.button span {
   width: 3em;
@@ -3209,7 +3209,7 @@ form.custom .custom.disabled {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #111111;
+  background: #f7f1d2;
 }
 
 .fixed {
@@ -3225,7 +3225,7 @@ form.custom .custom.disabled {
   height: 45px;
   line-height: 45px;
   position: relative;
-  background: #111111;
+  background: #f7f1d2;
   margin-bottom: 1.875em;
 }
 .top-bar ul {
@@ -3262,7 +3262,7 @@ form.custom .custom.disabled {
 }
 .top-bar .name h1 a {
   font-weight: bold;
-  color: white;
+  color: #172625;
   width: 50%;
   display: block;
   padding: 0 15px;
@@ -3273,7 +3273,7 @@ form.custom .custom.disabled {
   top: 0;
 }
 .top-bar .toggle-topbar a {
-  color: white;
+  color: #172625;
   text-transform: uppercase;
   font-size: 0.8125em;
   font-weight: bold;
@@ -3295,7 +3295,7 @@ form.custom .custom.disabled {
   height: 34px;
   line-height: 33px;
   padding: 0;
-  color: white;
+  color: #172625;
 }
 .top-bar .toggle-topbar.menu-icon a span {
   position: absolute;
@@ -3303,22 +3303,22 @@ form.custom .custom.disabled {
   display: block;
   width: 16px;
   height: 0;
-  -webkit-box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white;
-  box-shadow: 0 10px 0 1px white, 0 16px 0 1px white, 0 22px 0 1px white;
+  -webkit-box-shadow: 0 10px 0 1px #172625, 0 16px 0 1px #172625, 0 22px 0 1px #172625;
+  box-shadow: 0 10px 0 1px #172625, 0 16px 0 1px #172625, 0 22px 0 1px #172625;
 }
 .top-bar.expanded {
   height: auto;
   background: transparent;
 }
 .top-bar.expanded .title-area {
-  background: #111111;
+  background: #f7f1d2;
 }
 .top-bar.expanded .toggle-topbar a {
-  color: #888888;
+  color: #ac951e;
 }
 .top-bar.expanded .toggle-topbar a span {
-  -webkit-box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
-  box-shadow: 0 10px 0 1px #888888, 0 16px 0 1px #888888, 0 22px 0 1px #888888;
+  -webkit-box-shadow: 0 10px 0 1px #ac951e, 0 16px 0 1px #ac951e, 0 22px 0 1px #ac951e;
+  box-shadow: 0 10px 0 1px #ac951e, 0 16px 0 1px #ac951e, 0 22px 0 1px #ac951e;
 }
 
 .top-bar-section {
@@ -3333,13 +3333,13 @@ form.custom .custom.disabled {
   width: 100%;
   height: auto;
   display: block;
-  background: #333333;
+  background: #f7f1d2;
   font-size: 16px;
   margin: 0;
 }
 .top-bar-section .divider {
-  border-bottom: solid 1px #4d4d4d;
-  border-top: solid 1px #1a1a1a;
+  border-bottom: solid 1px #fffefd;
+  border-top: solid 1px #efe4a7;
   clear: both;
   height: 1px;
   width: 100%;
@@ -3347,22 +3347,23 @@ form.custom .custom.disabled {
 .top-bar-section ul li > a {
   display: block;
   width: 100%;
-  color: white;
+  color: #172625;
   padding: 12px 0 12px 0;
   padding-left: 15px;
   font-size: 0.8125em;
   font-weight: bold;
-  background: #333333;
+  background: #f7f1d2;
+  height: 45px;
 }
 .top-bar-section ul li > a:hover {
-  background: #2b2b2b;
+  background: #f5edc5;
 }
 .top-bar-section ul li > a.button {
-  background: #2ba6cb;
+  background: #24615b;
   font-size: 0.8125em;
 }
 .top-bar-section ul li > a.button:hover {
-  background: #2284a1;
+  background: #163c38;
 }
 .top-bar-section ul li > a.button.secondary {
   background: #e9e9e9;
@@ -3382,8 +3383,8 @@ form.custom .custom.disabled {
 .top-bar-section ul li > a.button.alert:hover {
   background: #970b0e;
 }
-.top-bar-section ul li.active a {
-  background: #2b2b2b;
+.top-bar-section ul li.active > a {
+  background: #f5edc5;
 }
 .top-bar-section .has-form {
   padding: 15px;
@@ -3397,11 +3398,11 @@ form.custom .custom.disabled {
   width: 0;
   height: 0;
   border: solid 5px;
-  border-color: transparent transparent transparent rgba(255, 255, 255, 0.5);
+  border-color: transparent transparent transparent rgba(172, 149, 30, 0.8);
   margin-right: 15px;
   margin-top: -4.5px;
   position: absolute;
-  top: 50%;
+  top: 22px;
   right: 0;
 }
 .top-bar-section .has-dropdown.moved {
@@ -3428,7 +3429,7 @@ form.custom .custom.disabled {
   margin-bottom: 0;
 }
 .top-bar-section .dropdown li.title h5 a {
-  color: white;
+  color: #172625;
   line-height: 22.5px;
   display: block;
 }
@@ -3452,7 +3453,7 @@ form.custom .custom.disabled {
 
 @media only screen and (min-width: 58.75em) {
   .top-bar {
-    background: #111111;
+    background: #f7f1d2;
     *zoom: 1;
     overflow: visible;
   }
@@ -3482,7 +3483,7 @@ form.custom .custom.disabled {
     top: 8px;
   }
   .top-bar.expanded {
-    background: #111111;
+    background: #f7f1d2;
   }
 
   .contain-to-grid .top-bar {
@@ -3510,10 +3511,10 @@ form.custom .custom.disabled {
   .top-bar-section li a:not(.button) {
     padding: 0 15px;
     line-height: 45px;
-    background: #111111;
+    background: #f7f1d2;
   }
   .top-bar-section li a:not(.button):hover {
-    background: black;
+    background: #e0c950;
   }
   .top-bar-section .has-dropdown > a {
     padding-right: 35px !important;
@@ -3524,7 +3525,7 @@ form.custom .custom.disabled {
     width: 0;
     height: 0;
     border: solid 5px;
-    border-color: rgba(255, 255, 255, 0.5) transparent transparent transparent;
+    border-color: rgba(172, 149, 30, 0.8) transparent transparent transparent;
     margin-top: -2.5px;
   }
   .top-bar-section .has-dropdown.moved {
@@ -3549,15 +3550,15 @@ form.custom .custom.disabled {
     min-width: 100%;
   }
   .top-bar-section .dropdown li a {
-    color: white;
+    color: #172625;
     line-height: 1;
     white-space: nowrap;
     padding: 7px 15px;
-    background: #1e1e1e;
+    background: #fbf8e8;
   }
   .top-bar-section .dropdown li label {
     white-space: nowrap;
-    background: #1e1e1e;
+    background: #fbf8e8;
   }
   .top-bar-section .dropdown li .dropdown {
     left: 100%;
@@ -3566,14 +3567,14 @@ form.custom .custom.disabled {
   .top-bar-section > ul > .divider {
     border-bottom: none;
     border-top: none;
-    border-right: solid 1px #2b2b2b;
-    border-left: solid 1px black;
+    border-right: solid 1px #fffefd;
+    border-left: solid 1px #efe4a7;
     clear: none;
     height: 45px;
     width: 0px;
   }
   .top-bar-section .has-form {
-    background: #111111;
+    background: #f7f1d2;
     padding: 0 15px;
     height: 45px;
   }
@@ -3648,7 +3649,7 @@ form.custom .custom.disabled {
   right: 0px;
   width: 11px;
   height: 14px;
-  border: solid 4px black;
+  border: solid 4px #000;
   border-top: none;
   border-bottom: none;
 }
@@ -3658,7 +3659,7 @@ form.custom .custom.disabled {
   width: 11px;
   height: 14px;
   border: solid 8px;
-  border-color: transparent transparent transparent black;
+  border-color: transparent transparent transparent #000;
 }
 .orbit-container:hover .orbit-timer > span {
   display: block;
@@ -3690,21 +3691,23 @@ form.custom .custom.disabled {
   left: 0;
 }
 .orbit-container .orbit-prev > span {
-  border-color: transparent white transparent transparent;
+  border-color: transparent;
+  border-right-color: #fff;
 }
 .orbit-container .orbit-prev:hover > span {
-  border-color: transparent #cccccc transparent transparent;
+  border-right-color: #ccc;
 }
 .orbit-container .orbit-next {
   right: 0;
 }
 .orbit-container .orbit-next > span {
-  border-color: transparent transparent transparent white;
+  border-color: transparent;
+  border-left-color: #fff;
   left: 50%;
   margin-left: -8px;
 }
 .orbit-container .orbit-next:hover > span {
-  border-color: transparent transparent transparent #cccccc;
+  border-left-color: #ccc;
 }
 
 .orbit-bullets {
@@ -3720,7 +3723,7 @@ form.custom .custom.disabled {
   background: #fff;
   float: left;
   margin-right: 6px;
-  border: solid 2px black;
+  border: solid 2px #000;
   -webkit-border-radius: 1000px;
   border-radius: 1000px;
 }
@@ -3939,10 +3942,10 @@ ol.commentlist .joyride-tip-guide cite.fn,
   text-decoration: none;
   font-size: 30px;
   font-weight: normal;
-  line-height: 0.5 !important;
+  line-height: .5 !important;
 }
 .joyride-close-tip:hover, .joyride-close-tip:focus {
-  color: #eeeeee !important;
+  color: #eee !important;
 }
 
 .joyride-modal-bg {
@@ -3958,11 +3961,30 @@ ol.commentlist .joyride-tip-guide cite.fn,
   cursor: pointer;
 }
 
+.joyride-expose-wrapper {
+  background-color: #ffffff;
+  position: absolute;
+  border-radius: 3px;
+  z-index: 102;
+  -moz-box-shadow: 0px 0px 30px #ffffff;
+  -webkit-box-shadow: 0px 0px 15px #ffffff;
+  box-shadow: 0px 0px 15px #ffffff;
+}
+
+.joyride-expose-cover {
+  background: transparent;
+  border-radius: 3px;
+  position: absolute;
+  z-index: 9999;
+  top: 0px;
+  left: 0px;
+}
+
 /* Styles for screens that are atleast 768px; */
 @media only screen and (min-width: 48em) {
   .joyride-tip-guide {
     width: 300px;
-    left: 0;
+    left: inherit;
   }
   .joyride-tip-guide .joyride-nub.bottom {
     border-color: black !important;
@@ -4074,15 +4096,15 @@ ol.commentlist .joyride-tip-guide cite.fn,
 }
 
 @media only screen and (min-width: 48em) {
-  .clearing-main-left,
-  .clearing-main-right {
+  .clearing-main-prev,
+  .clearing-main-next {
     position: absolute;
     height: 100%;
     width: 40px;
     top: 0;
   }
-  .clearing-main-left > span,
-  .clearing-main-right > span {
+  .clearing-main-prev > span,
+  .clearing-main-next > span {
     position: absolute;
     top: 50%;
     display: block;
@@ -4091,23 +4113,25 @@ ol.commentlist .joyride-tip-guide cite.fn,
     border: solid 16px;
   }
 
-  .clearing-main-left {
+  .clearing-main-prev {
     left: 0;
   }
-  .clearing-main-left > span {
+  .clearing-main-prev > span {
     left: 5px;
-    border-color: transparent white transparent transparent;
+    border-color: transparent;
+    border-right-color: white;
   }
 
-  .clearing-main-right {
+  .clearing-main-next {
     right: 0;
   }
-  .clearing-main-right > span {
-    border-color: transparent transparent transparent white;
+  .clearing-main-next > span {
+    border-color: transparent;
+    border-left-color: white;
   }
 
-  .clearing-main-left.disabled,
-  .clearing-main-right.disabled {
+  .clearing-main-prev.disabled,
+  .clearing-main-next.disabled {
     opacity: 0.5;
   }
 
@@ -4183,8 +4207,8 @@ ol.commentlist .joyride-tip-guide cite.fn,
   position: relative;
   padding: 0.6875em 1.3125em 0.75em 0.6875em;
   font-size: 0.875em;
-  background-color: #2ba6cb;
-  border-color: #2284a1;
+  background-color: #24615b;
+  border-color: #163c38;
   color: white;
 }
 .alert-box .close {
@@ -4251,7 +4275,7 @@ ol.commentlist .joyride-tip-guide cite.fn,
   font-size: 0.6875em;
   padding-left: 0.75em;
   text-transform: uppercase;
-  color: #2ba6cb;
+  color: #24615b;
 }
 .breadcrumbs li.current a {
   cursor: default;
@@ -4309,7 +4333,7 @@ kbd {
   position: relative;
   padding: 0.1875em 0.625em 0.25em;
   font-size: 0.875em;
-  background-color: #2ba6cb;
+  background-color: #24615b;
   color: #fff;
 }
 .label.radius {
@@ -4335,7 +4359,9 @@ kbd {
 
 /* Inline Lists */
 .inline-list {
-  margin: 0 0 1.0625em -1.375em;
+  margin: 0 auto 1.0625em auto;
+  margin-left: -1.375em;
+  margin-right: 0;
   padding: 0;
   list-style: none;
   overflow: hidden;
@@ -4381,13 +4407,13 @@ kbd {
   background: transparent;
 }
 .pagination li.current a {
-  background: #2ba6cb;
+  background: #24615b;
   color: white;
   font-weight: bold;
   cursor: default;
 }
 .pagination li.current a:hover, .pagination li.current a:focus {
-  background: #2ba6cb;
+  background: #24615b;
 }
 
 .pagination-centered {
@@ -4426,10 +4452,10 @@ kbd {
 .panel.callout {
   border-style: solid;
   border-width: 1px;
-  border-color: #2284a1;
+  border-color: #163c38;
   margin-bottom: 1.25em;
   padding: 1.25em;
-  background: #2ba6cb;
+  background: #24615b;
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 }
@@ -4514,7 +4540,7 @@ kbd {
   margin-bottom: 0.625em;
 }
 .progress .meter {
-  background: #2ba6cb;
+  background: #24615b;
   height: 100%;
   display: block;
 }
@@ -4564,7 +4590,7 @@ kbd {
 }
 .side-nav li a {
   display: block;
-  color: #2ba6cb;
+  color: #24615b;
 }
 .side-nav li.active a {
   color: #4d4d4d;
@@ -4607,7 +4633,7 @@ kbd {
   -webkit-border-radius: 1000px;
   border-radius: 1000px;
   font-weight: bold;
-  background: #2ba6cb;
+  background: #24615b;
   padding: 0.1875em 0.5625em;
   cursor: default;
   color: white;
@@ -4637,7 +4663,6 @@ kbd {
     width: 50%;
     height: 100%;
     margin: 0;
-    text-align: right;
     font-weight: bold;
     text-align: left;
     -webkit-transition: all 0.1s ease-out;
@@ -4810,7 +4835,7 @@ kbd {
 }
 [data-magellan-expedition] {
   background: white;
-  z-index: 997;
+  z-index: 50;
   min-width: 100%;
   padding: 10px;
 }
@@ -4870,8 +4895,8 @@ table tfoot tr td {
   transition: all 200ms ease-out;
 }
 .th:hover, .th:focus {
-  -webkit-box-shadow: 0 0 6px 1px rgba(43, 166, 203, 0.5);
-  box-shadow: 0 0 6px 1px rgba(43, 166, 203, 0.5);
+  -webkit-box-shadow: 0 0 6px 1px rgba(36, 97, 91, 0.5);
+  box-shadow: 0 0 6px 1px rgba(36, 97, 91, 0.5);
 }
 .th.radius {
   -webkit-border-radius: 3px;
@@ -4886,8 +4911,8 @@ table tfoot tr td {
   color: #333333;
 }
 .has-tip:hover, .has-tip:focus {
-  border-bottom: dotted 1px #196177;
-  color: #2ba6cb;
+  border-bottom: dotted 1px #081715;
+  color: #24615b;
 }
 .has-tip.tip-left, .has-tip.tip-right {
   float: none !important;
@@ -4911,6 +4936,7 @@ table tfoot tr td {
 }
 .tooltip > .nub {
   display: block;
+  left: 5px;
   position: absolute;
   width: 0;
   height: 0;
@@ -4919,8 +4945,8 @@ table tfoot tr td {
   top: -10px;
 }
 .tooltip.opened {
-  color: #2ba6cb !important;
-  border-bottom: dotted 1px #196177 !important;
+  color: #24615b !important;
+  border-bottom: dotted 1px #081715 !important;
 }
 
 .tap-to-close {
@@ -4967,12 +4993,12 @@ table tfoot tr td {
 /* Foundation Dropdowns */
 .f-dropdown {
   position: absolute;
-  left: -9999px;
   top: -9999px;
   list-style: none;
+  padding: 1.25em;
   width: 100%;
-  max-height: none;
   height: auto;
+  max-height: none;
   background: white;
   border: solid 1px #cccccc;
   font-size: 16px;
@@ -5033,7 +5059,6 @@ table tfoot tr td {
 }
 .f-dropdown.content {
   position: absolute;
-  left: -9999px;
   top: -9999px;
   list-style: none;
   padding: 1.25em;
@@ -5065,11 +5090,9 @@ table tfoot tr td {
   max-width: 800px;
 }
 
-/* Start to customize Reverie */
-header.row,
-.container.row,
-.row.full-width {
-  background-color: rgba(255, 255, 255, 0.9);
+/* Start to customizing */
+.top-bar-section .dropdown li a {
+  padding-top: 17px;
 }
 
 h4.subheader, ol.commentlist cite.subheader.fn {
@@ -5106,13 +5129,13 @@ h4.subheader, ol.commentlist cite.subheader.fn {
   background: transparent;
 }
 .page-numbers li.current a {
-  background: #2ba6cb;
+  background: #24615b;
   color: white;
   font-weight: bold;
   cursor: default;
 }
 .page-numbers li.current a:hover, .page-numbers li.current a:focus {
-  background: #2ba6cb;
+  background: #24615b;
 }
 
 .page-numbers li span:hover a,
@@ -5120,7 +5143,7 @@ h4.subheader, ol.commentlist cite.subheader.fn {
   background: #e6e6e6;
 }
 .page-numbers li span.current {
-  background: #2ba6cb;
+  background: #24615b;
   padding: 0.0625em 0.4375em 0.0625em;
   color: white;
   font-weight: bold;
