--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name:         ABC 1900 based on reverie (foundation).
 Theme URI:          http://abc1900.dk
 Description:        Under construction
-Version:            1.0.0
+Version:            19. April - 2013
 Author:             Frivillige fra ABC1900
 Author URI:         http://abc1900.dk/
 
