--- a/scss/style.scss
+++ b/scss/style.scss
@@ -17,6 +17,17 @@
 	padding-top: 17px;
 }
 
+.top-bar input[type="text"] {
+	width: 11em;
+}
+
+.contain-to-grid .top-bar {
+	margin-bottom: 40px;
+}
+
+
+
+
 
 // adjusting header
 h4.subheader {
