--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ body {
 }
 
 body {
-  background: #fdfdfd;
+  background: #fffefd;
   color: #172625;
   padding: 0;
   margin: 0;
@@ -1589,12 +1589,12 @@ td {
 
 /* Default Link Styles */
 a {
-  color: #24615b;
+  color: #5795d0;
   text-decoration: none;
   line-height: inherit;
 }
 a:hover, a:focus {
-  color: #1d4e4a;
+  color: #4388ca;
 }
 a img {
   border: none;
@@ -1933,12 +1933,12 @@ button, .button {
   padding-bottom: 0.8125em;
   padding-left: 1.5em;
   font-size: 1em;
-  background-color: #24615b;
-  border-color: #163c38;
+  background-color: #5795d0;
+  border-color: #357cbf;
   color: white;
 }
 button:hover, button:focus, .button:hover, .button:focus {
-  background-color: #163c38;
+  background-color: #357cbf;
 }
 button:hover, button:focus, .button:hover, .button:focus {
   color: white;
@@ -2013,8 +2013,8 @@ button.right-align, .button.right-align {
   padding-right: 0.75em;
 }
 button.disabled, button[disabled], .button.disabled, .button[disabled] {
-  background-color: #24615b;
-  border-color: #163c38;
+  background-color: #5795d0;
+  border-color: #357cbf;
   color: white;
   cursor: default;
   opacity: 0.6;
@@ -2022,13 +2022,13 @@ button.disabled, button[disabled], .button.disabled, .button[disabled] {
   box-shadow: none;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #163c38;
+  background-color: #357cbf;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
   color: white;
 }
 button.disabled:hover, button.disabled:focus, button[disabled]:hover, button[disabled]:focus, .button.disabled:hover, .button.disabled:focus, .button[disabled]:hover, .button[disabled]:focus {
-  background-color: #24615b;
+  background-color: #5795d0;
 }
 button.disabled.secondary, button[disabled].secondary, .button.disabled.secondary, .button[disabled].secondary {
   background-color: #e9e9e9;
@@ -2865,7 +2865,7 @@ form.custom .custom.disabled {
   background-color: rgba(0, 0, 0, 0.1);
 }
 .split.button span {
-  border-left-color: #0f2927;
+  border-left-color: #306fab;
 }
 .split.button span {
   width: 3em;
@@ -3209,7 +3209,7 @@ form.custom .custom.disabled {
 /* Wrapped around .top-bar to contain to grid width */
 .contain-to-grid {
   width: 100%;
-  background: #f7f1d2;
+  background: #f1ebc3;
 }
 
 .fixed {
@@ -3225,7 +3225,7 @@ form.custom .custom.disabled {
   height: 45px;
   line-height: 45px;
   position: relative;
-  background: #f7f1d2;
+  background: #f1ebc3;
   margin-bottom: 1.875em;
 }
 .top-bar ul {
@@ -3311,7 +3311,7 @@ form.custom .custom.disabled {
   background: transparent;
 }
 .top-bar.expanded .title-area {
-  background: #f7f1d2;
+  background: #f1ebc3;
 }
 .top-bar.expanded .toggle-topbar a {
   color: #ac951e;
@@ -3359,11 +3359,11 @@ form.custom .custom.disabled {
   background: #f5edc5;
 }
 .top-bar-section ul li > a.button {
-  background: #24615b;
+  background: #5795d0;
   font-size: 0.8125em;
 }
 .top-bar-section ul li > a.button:hover {
-  background: #163c38;
+  background: #357cbf;
 }
 .top-bar-section ul li > a.button.secondary {
   background: #e9e9e9;
@@ -3398,7 +3398,7 @@ form.custom .custom.disabled {
   width: 0;
   height: 0;
   border: solid 5px;
-  border-color: transparent transparent transparent rgba(172, 149, 30, 0.8);
+  border-color: transparent transparent transparent rgba(0, 0, 0, 0.4);
   margin-right: 15px;
   margin-top: -4.5px;
   position: absolute;
@@ -3453,7 +3453,7 @@ form.custom .custom.disabled {
 
 @media only screen and (min-width: 58.75em) {
   .top-bar {
-    background: #f7f1d2;
+    background: #f1ebc3;
     *zoom: 1;
     overflow: visible;
   }
@@ -3483,7 +3483,7 @@ form.custom .custom.disabled {
     top: 8px;
   }
   .top-bar.expanded {
-    background: #f7f1d2;
+    background: #f1ebc3;
   }
 
   .contain-to-grid .top-bar {
@@ -3511,7 +3511,7 @@ form.custom .custom.disabled {
   .top-bar-section li a:not(.button) {
     padding: 0 15px;
     line-height: 45px;
-    background: #f7f1d2;
+    background: #f1ebc3;
   }
   .top-bar-section li a:not(.button):hover {
     background: #e0c950;
@@ -3525,7 +3525,7 @@ form.custom .custom.disabled {
     width: 0;
     height: 0;
     border: solid 5px;
-    border-color: rgba(172, 149, 30, 0.8) transparent transparent transparent;
+    border-color: rgba(0, 0, 0, 0.4) transparent transparent transparent;
     margin-top: -2.5px;
   }
   .top-bar-section .has-dropdown.moved {
@@ -3554,11 +3554,11 @@ form.custom .custom.disabled {
     line-height: 1;
     white-space: nowrap;
     padding: 7px 15px;
-    background: #fbf8e8;
+    background: #f6f2d8;
   }
   .top-bar-section .dropdown li label {
     white-space: nowrap;
-    background: #fbf8e8;
+    background: #f6f2d8;
   }
   .top-bar-section .dropdown li .dropdown {
     left: 100%;
@@ -3567,14 +3567,14 @@ form.custom .custom.disabled {
   .top-bar-section > ul > .divider {
     border-bottom: none;
     border-top: none;
-    border-right: solid 1px #fffefd;
-    border-left: solid 1px #efe4a7;
+    border-right: solid 1px #fbf9ec;
+    border-left: solid 1px #e8de99;
     clear: none;
     height: 45px;
     width: 0px;
   }
   .top-bar-section .has-form {
-    background: #f7f1d2;
+    background: #f1ebc3;
     padding: 0 15px;
     height: 45px;
   }
@@ -4207,8 +4207,8 @@ ol.commentlist .joyride-tip-guide cite.fn,
   position: relative;
   padding: 0.6875em 1.3125em 0.75em 0.6875em;
   font-size: 0.875em;
-  background-color: #24615b;
-  border-color: #163c38;
+  background-color: #5795d0;
+  border-color: #357cbf;
   color: white;
 }
 .alert-box .close {
@@ -4275,7 +4275,7 @@ ol.commentlist .joyride-tip-guide cite.fn,
   font-size: 0.6875em;
   padding-left: 0.75em;
   text-transform: uppercase;
-  color: #24615b;
+  color: #5795d0;
 }
 .breadcrumbs li.current a {
   cursor: default;
@@ -4333,7 +4333,7 @@ kbd {
   position: relative;
   padding: 0.1875em 0.625em 0.25em;
   font-size: 0.875em;
-  background-color: #24615b;
+  background-color: #5795d0;
   color: #fff;
 }
 .label.radius {
@@ -4407,13 +4407,13 @@ kbd {
   background: transparent;
 }
 .pagination li.current a {
-  background: #24615b;
+  background: #5795d0;
   color: white;
   font-weight: bold;
   cursor: default;
 }
 .pagination li.current a:hover, .pagination li.current a:focus {
-  background: #24615b;
+  background: #5795d0;
 }
 
 .pagination-centered {
@@ -4452,15 +4452,15 @@ kbd {
 .panel.callout {
   border-style: solid;
   border-width: 1px;
-  border-color: #163c38;
+  border-color: #357cbf;
   margin-bottom: 1.25em;
   padding: 1.25em;
-  background: #24615b;
+  background: #5795d0;
   -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 }
 .panel.callout h1, .panel.callout h2, .panel.callout h3, .panel.callout h4, .panel.callout ol.commentlist cite.fn, ol.commentlist .panel.callout cite.fn, .panel.callout h5, .panel.callout h6, .panel.callout p {
-  color: white;
+  color: #333333;
 }
 .panel.callout > :first-child {
   margin-top: 0;
@@ -4540,7 +4540,7 @@ kbd {
   margin-bottom: 0.625em;
 }
 .progress .meter {
-  background: #24615b;
+  background: #5795d0;
   height: 100%;
   display: block;
 }
@@ -4590,7 +4590,7 @@ kbd {
 }
 .side-nav li a {
   display: block;
-  color: #24615b;
+  color: #5795d0;
 }
 .side-nav li.active a {
   color: #4d4d4d;
@@ -4633,7 +4633,7 @@ kbd {
   -webkit-border-radius: 1000px;
   border-radius: 1000px;
   font-weight: bold;
-  background: #24615b;
+  background: #5795d0;
   padding: 0.1875em 0.5625em;
   cursor: default;
   color: white;
@@ -4895,8 +4895,8 @@ table tfoot tr td {
   transition: all 200ms ease-out;
 }
 .th:hover, .th:focus {
-  -webkit-box-shadow: 0 0 6px 1px rgba(36, 97, 91, 0.5);
-  box-shadow: 0 0 6px 1px rgba(36, 97, 91, 0.5);
+  -webkit-box-shadow: 0 0 6px 1px rgba(87, 149, 208, 0.5);
+  box-shadow: 0 0 6px 1px rgba(87, 149, 208, 0.5);
 }
 .th.radius {
   -webkit-border-radius: 3px;
@@ -4911,8 +4911,8 @@ table tfoot tr td {
   color: #333333;
 }
 .has-tip:hover, .has-tip:focus {
-  border-bottom: dotted 1px #081715;
-  color: #24615b;
+  border-bottom: dotted 1px #2a6297;
+  color: #5795d0;
 }
 .has-tip.tip-left, .has-tip.tip-right {
   float: none !important;
@@ -4945,8 +4945,8 @@ table tfoot tr td {
   top: -10px;
 }
 .tooltip.opened {
-  color: #24615b !important;
-  border-bottom: dotted 1px #081715 !important;
+  color: #5795d0 !important;
+  border-bottom: dotted 1px #2a6297 !important;
 }
 
 .tap-to-close {
@@ -5090,17 +5090,57 @@ table tfoot tr td {
   max-width: 800px;
 }
 
-/* Start to customizing */
+@media (max-width: 960px) {
+  .show-for-960-up {
+    display: none;
+  }
+}
+
+@media (min-width: 960px) {
+  .hide-for-960-up {
+    display: none;
+  }
+}
+
+@media (max-width: 520px) {
+  .show-for-520-up {
+    display: none;
+  }
+}
+
+@media (min-width: 520px) {
+  .hide-for-520-up {
+    display: none;
+  }
+}
+
+header[role="banner"] img {
+  width: 80px;
+  height: 80px;
+  float: left;
+  margin: 20px;
+}
+
 .top-bar-section .dropdown li a {
   padding-top: 17px;
 }
 
-.top-bar input[type="text"] {
-  width: 11em;
+.top-bar-section li a:not(.button):hover {
+  background: #bbd4ec;
 }
 
 .contain-to-grid .top-bar {
   margin-bottom: 40px;
+}
+
+.top-bar input[type="text"] {
+  background: #eee6b2;
+  border: none;
+  color: #172625;
+}
+.top-bar ::-webkit-input-placeholder {
+  color: #ddcd67;
+  text-shadow: 0px 1px 1px white;
 }
 
 h4.subheader, ol.commentlist cite.subheader.fn {
@@ -5137,13 +5177,13 @@ h4.subheader, ol.commentlist cite.subheader.fn {
   background: transparent;
 }
 .page-numbers li.current a {
-  background: #24615b;
+  background: #5795d0;
   color: white;
   font-weight: bold;
   cursor: default;
 }
 .page-numbers li.current a:hover, .page-numbers li.current a:focus {
-  background: #24615b;
+  background: #5795d0;
 }
 
 .page-numbers li span:hover a,
@@ -5151,7 +5191,7 @@ h4.subheader, ol.commentlist cite.subheader.fn {
   background: #e6e6e6;
 }
 .page-numbers li span.current {
-  background: #24615b;
+  background: #5795d0;
   padding: 0.0625em 0.4375em 0.0625em;
   color: white;
   font-weight: bold;
