--- a/scss/style.scss
+++ b/scss/style.scss
@@ -101,7 +101,9 @@ table.court-overview {
 	}
 
 	tr td[class^="men"], tr td[class^="woman"], tr td[class^="youth"], tr td[class^="mix"], tr td[class^="liga"] {
-		border: 1px solid #fff; }
+		border: 1px solid #fff; 
+		text-align: center;
+	}
 
 	tr td:last-child {
 		border-right: none;
@@ -119,18 +121,10 @@ table.court-overview {
 	$court-youth-color: #ccff99;
 	$court-mix-color: #ffcc99;
 	$court-liga-color: #ffff99;
-	.men1 { background: $court-men-color;}
-	.men2 { background: lighten($court-men-color, 5%);}
-	.men3 { background: lighten($court-men-color, 8%);}
-	.men4 { background: lighten($court-men-color, 11%);}
-	.men5 { background: lighten($court-men-color, 14%);}
-	.woman1 { background: $court-woman-color;}
-	.woman2 { background: lighten($court-woman-color, 5%);}
-	.woman3 { background: lighten($court-woman-color, 8%);}
-	.woman4 { background: lighten($court-woman-color, 11%);}
-	.woman5 { background: lighten($court-woman-color, 14%);}
-	.youth1 { background: $court-youth-color;}
-	.mix1 { background: $court-mix-color;}
+	[class^="men"] { background: $court-men-color;}
+	[class^="woman"] { background: $court-woman-color;}
+	[class^="youth"] { background: $court-youth-color;}
+	[class^="mix"] { background: $court-mix-color;}
 	.liga { background: $court-liga-color;}
 }
 
