--- a/css/style.css
+++ b/css/style.css
@@ -5184,6 +5184,7 @@ table.court-overview tr.subtle > td:first-child {
 }
 table.court-overview tr td[class^="men"], table.court-overview tr td[class^="woman"], table.court-overview tr td[class^="youth"], table.court-overview tr td[class^="mix"], table.court-overview tr td[class^="liga"] {
   border: 1px solid #fff;
+  text-align: center;
 }
 table.court-overview tr td:last-child {
   border-right: none;
@@ -5194,40 +5195,16 @@ table.court-overview tr.bottom td {
 table.court-overview td > span {
   color: rgba(0, 0, 0, 0.4);
 }
-table.court-overview .men1 {
+table.court-overview [class^="men"] {
   background: #99ccff;
 }
-table.court-overview .men2 {
-  background: #b3d9ff;
-}
-table.court-overview .men3 {
-  background: #c2e0ff;
-}
-table.court-overview .men4 {
-  background: #d1e8ff;
-}
-table.court-overview .men5 {
-  background: #e0f0ff;
-}
-table.court-overview .woman1 {
+table.court-overview [class^="woman"] {
   background: #ff99cc;
 }
-table.court-overview .woman2 {
-  background: #ffb3d9;
-}
-table.court-overview .woman3 {
-  background: #ffc2e0;
-}
-table.court-overview .woman4 {
-  background: #ffd1e8;
-}
-table.court-overview .woman5 {
-  background: #ffe0f0;
-}
-table.court-overview .youth1 {
+table.court-overview [class^="youth"] {
   background: #ccff99;
 }
-table.court-overview .mix1 {
+table.court-overview [class^="mix"] {
   background: #ffcc99;
 }
 table.court-overview .liga {
