fix for topbar menu

--- a/css/style.css
+++ b/css/style.css
@@ -5134,12 +5134,12 @@ header[role="banner"] img {
   background: #bbd4ec;
 }
 
-.contain-to-grid .top-bar {
-  margin-bottom: 40px;
+.top-bar-section .dropdown li a.parent-link {
+  font-weight: bold;
 }
 
-.vspace-bottom {
-  margin-bottom: 3em !important;
+.back.js-generated h5 {
+  font-size: 0.8125em;
 }
 
 .top-bar input[type="text"] {
@@ -5150,6 +5150,14 @@ header[role="banner"] img {
 .top-bar ::-webkit-input-placeholder {
   color: #ddcd67;
   text-shadow: 0px 1px 1px white;
+}
+
+.contain-to-grid .top-bar {
+  margin-bottom: 40px;
+}
+
+.vspace-bottom {
+  margin-bottom: 3em !important;
 }
 
 /* This element holds injected scripts inside iframes that in some cases may stretch layouts. So, we're just hiding it. */
