facebook comments added

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -84,7 +84,7 @@ header[role="banner"] {
   width: 100% !important;
   border: none !important;
 }
-.fb_iframe_widget {
+.fb-like-box {
 	border: 1px solid #ddd !important;
 }
 
