--- a/css/style.css
+++ b/css/style.css
@@ -5171,7 +5171,7 @@ header[role="banner"] img {
   border: none !important;
 }
 
-.fb_iframe_widget {
+.fb-like-box {
   border: 1px solid #ddd !important;
 }
 
